--- a/README.rdoc
+++ b/README.rdoc
@@ -94,12 +94,19 @@ primary comparison key, and so on down the line.  Thus:
     LastFirst = KeyStruct[:last, :first]
     LastFirst.new(:first => "Abigail", :last => "Zither") <=> LastFirst.new(:first => "Zenobia", :last => "Aardvark") # --> +1
 
+== to_s and inspect
+
+KeyStruct classes define reasonable default +to_s+ and +inspect+ methods, along the lines of:
+
+        Name.new(:first => "Jack", :last => "Ripper").to_s      # --> '[Name first:Jack last:Ripper]'
+        Name.new(:first => "Jack", :last => "Ripper").inspect   # --> '<Name:0x1234abcd first:"Jack" last:"Ripper">'
+
 == Converting to a hash
 
 KeyStruct classes define a +to_hash+ method that returns a hash containing
 all members and their values:
 
-        Name.new(:first => "Jack", :last => "Ripper").to_hash # --> {:first => "Jack", :last => "Ripper")
+        Name.new(:first => "Jack", :last => "Ripper").to_hash   # --> {:first => "Jack", :last => "Ripper")
 
 == Installation
 
