--- a/README.rdoc
+++ b/README.rdoc
@@ -126,6 +126,7 @@ Requires ruby >= 1.9.2.  (Has been tested on MRI 1.9.2 and MRI 1.9.3)
 
 Release Notes:
 
+* 0.3.1 - Bug fix: to_hash when a value is an array.  Was raising ArgumentError for Hash
 * 0.3.0 - Introduced to_s and inspect
 * 0.2.1 - Bug fix: return false for == with an incompatible object.  Was raising NoMethodError
 * 0.2.0 - Introduced <=> and to_hash
